# rust-server

./: .env.example  Cargo.toml  readme.md
src/: main.rs
src/api/: user_api.rs
src/core/: jwt.rs
src/repository/: mongodb_repo.rs
