[package]
name = "rust-actix-mongo"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["Rishabh Bhatia <irishabh96@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"
actix-web-grants = "4.1.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]
